filled out readme and made gitignore

--- a/improved_solution.ipynb
+++ b/improved_solution.ipynb
@@ -19,8 +19,7 @@
     "import gensim\n",
     "from gensim.models.doc2vec import Doc2Vec\n",
     "from gensim.models.keyedvectors import KeyedVectors\n",
-    "import os\n",
-    "import smart_open"
+    "import os"
    ]
   },
   {
